--- a/first_app/pubspec.yaml
+++ b/first_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   scoped_model: ^1.0.1
   http: ^0.12.0+2
   shared_preferences: ^0.5.3+4
+  rxdart: ^0.22.2
 
 dev_dependencies:
   flutter_test:
