--- a/first_app/pubspec.yaml
+++ b/first_app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+2
   shared_preferences: ^0.5.3+4
   rxdart: ^0.22.2
+  image_picker: ^0.6.1+4
 
 dev_dependencies:
   flutter_test:
