--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,12 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "@google-cloud/storage": "^3.2.1",
+    "busboy": "^0.3.1",
+    "cors": "^2.8.5",
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.1.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
