--- a/first_app/pubspec.yaml
+++ b/first_app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.3+4
   rxdart: ^0.22.2
   image_picker: ^0.6.1+4
+  mime: ^0.9.6+3
 
 dev_dependencies:
   flutter_test:
