--- a/first_app/pubspec.yaml
+++ b/first_app/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   rxdart: ^0.22.2
   image_picker: ^0.6.1+4
   mime: ^0.9.6+3
+  url_launcher: ^5.1.3
 
 dev_dependencies:
   flutter_test:
