--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
+first_app/ios/Flutter/flutter_export_environment.sh
+first_app/ios/Flutter/flutter_export_environment.sh
