--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,6 @@ doc/api/
 *.js.deps
 *.js.map
 
-first_app/android/key.propereties
 first_app/android/key.properties
 first_app/android/app/keys/key.jks
+first_app/ios/Flutter/flutter_export_environment.sh
