--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ doc/api/
 first_app/android/key.properties
 first_app/android/app/keys/key.jks
 first_app/ios/Flutter/flutter_export_environment.sh
+first_app/ios/Flutter/flutter_export_environment.sh
